# zhongwen-reader

./: .gitignore  LICENSE  README.md  build.spec  build_icon.py  build_jmdict.py  pyproject.toml  run_app.py
docs/: HOW_IT_WAS_MADE.md
docs/superpowers/specs/: 2026-07-08-japanese-support-design.md
src/zhongwen_reader/: __init__.py  __main__.py  capture.py  config.py  deinflect.py  dictionary.py  hotkey.py  jmdict.py  ocr.py  pinyin.py  popup.py  tray.py
src/zhongwen_reader/providers/: __init__.py  chinese.py  japanese.py
tests/: test_chinese_provider.py  test_config.py  test_deinflect.py  test_dictionary.py  test_japanese_provider.py  test_jmdict.py  test_ocr_integration.py  test_ocr_integration_ja.py  test_ocr_mapping.py  test_pinyin.py  test_popup_content.py
