[project]
name = "zhongwen-reader"
version = "0.1.0"
description = "System-wide Chinese popup dictionary for Windows: hold a key, hover over Chinese text anywhere on screen, see pinyin and definitions."
requires-python = ">=3.13"
dependencies = [
    "mss",
    "pillow",
    "pystray",
    "winrt-runtime",
    "winrt-Windows.Media.Ocr",
    "winrt-Windows.Graphics.Imaging",
    "winrt-Windows.Storage.Streams",
    "winrt-Windows.Globalization",
    "winrt-Windows.Foundation",
    "winrt-Windows.Foundation.Collections",
]

[project.optional-dependencies]
dev = ["pytest", "pyinstaller"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
